--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -47,7 +47,7 @@
                
             </div>
             <div class="menu">
-            <nav class="nav"><a href="/blog" class="nav-item hvr-sweep-to-right">Blogs <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+            <nav class="nav"><a href="/blog" class="nav-item hvr-sweep-to-right">Blog <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
             <a href="/work" class="nav-item hvr-sweep-to-right">Work <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
             </nav>
           
