--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer><p class="text-center">{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2006"}}. All rights reserved. {{end}} Built with <span>&#x2665;</span> <a href="https://gohugo.io" target="_blank">Hugo</a> Deployed on <a href="https://www.netlify.com" target="_blank">Netlify</a></p></footer>
+<footer><p class="text-center">{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2006"}}. All rights reserved. {{end}} Built with <span>&#x2665;</span> in <a href="https://gohugo.io" target="_blank">Hugo</a> Deployed on <a href="https://www.netlify.com" target="_blank">Netlify</a></p></footer>
 
 <!-- Back to Top -->
 <div class="back__top " id="back-top"></div>
