--- a/static/stylus/components/_slides.styl
+++ b/static/stylus/components/_slides.styl
@@ -2,9 +2,9 @@
   display: flex;
   //background: #6c5b7b
   background: linear-gradient(to right, #ffd452, #6c5b7b, #355c7d)
-  padding: 2rem
-  margin: 3rem
-  border-radius: 3px
+  padding: 2rem 4rem
+  //margin: 3rem
+  //border-radius: 3px
   +respond(mobile)
     margin: 0
     border-radius: 0
