Updating blog post

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
 <!-- /Back to Top -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-
+<script type="text/javascript" src="https://raw.githubusercontent.com/sanderheilbron/vimeo.ga.js/master/vimeo.ga.min.js"></script>
 <script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
 <script src="{{ .Site.BaseURL }}js/assets/vendor/headlines/headlines.min.js?v=1.0" type="text/javascript"></script>
