--- a/static/stylus/base/_base.styl
+++ b/static/stylus/base/_base.styl
@@ -32,9 +32,9 @@ body
     
 
 
-::selection 
-    background-color: color-primary
-    color: color-white
+// ::selection 
+//     background-color: color-primary
+//     color: color-white
 
 
 body 
