--- a/static/stylus/base/_typography.styl
+++ b/static/stylus/base/_typography.styl
@@ -5,8 +5,14 @@ h1, h2, h3
 	margin: 0
 	
 h1 
-	font-size: 3rem
-	font-weight: 500
+	font-size 3.4rem
+	font-weight 500
+	
+h2
+	font-size: 2.8rem
+	
+h3
+	font-size: 2.4rem
 
 h4
 	font-family: "Exo 2", sans-serif
@@ -19,8 +25,9 @@ h4
 	text-transform: uppercase
 	
 p
-	font-size: 1.4rem
+	font-size: 1.6rem
 	margin: 1rem 0
+	line-height: 3.5rem
 	
 blockquote {
   background: #f9f9f9;
