--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
 		<div class="grid grid-1x-3">
 			<div class="logo-box">
 				<a href="{{ .Site.BaseURL }}" class="text-center logo">
-					<img src="/images/hp-logo.png" />
+					<img src="/images/hp-logo.png" alt="Harshit Purwar" />
 					<h1 class="header__title sr-only">{{ .Site.Title }}</h1>
 				</a>
 			</div>
@@ -32,16 +32,16 @@
                  data-animation-delay="1600"
                  data-animation-distance="50px">
                <div class="social-network">
-                  <a href="https://twitter.com/harshitpurwar" target="_blank" class="hvr-sweep-to-right"><i class="fa fa-twitter" aria-hidden="true" title="My Twitter Timeline"></i></a>
+                  <a href="https://twitter.com/harshitpurwar" target="_blank" class="hvr-sweep-to-right"><i class="fa fa-twitter" aria-hidden="true" title="My Twitter Timeline"></i><span class="sr-only">Twitter</span></a>
                </div>
                <div class="social-network a-hideMobile">
-                  <a href="https://github.com/hertzden" class="hvr-sweep-to-right" target="_blank"><i class="fa fa-github" aria-hidden="true" title="My Github Profile"></i></a>
+                  <a href="https://github.com/hertzden" class="hvr-sweep-to-right" target="_blank"><i class="fa fa-github" aria-hidden="true" title="My Github Profile"></i><span class="sr-only">Github</span></a>
                </div>
                <div class="social-network">
-                  <a href="https://www.linkedin.com/in/harshitpurwar/" target="_blank" class="hvr-sweep-to-right"><i class="fa fa-linkedin" aria-hidden="true" title="My Linkedin Profile"></i></a>
+                  <a href="https://www.linkedin.com/in/harshitpurwar/" target="_blank" class="hvr-sweep-to-right"><i class="fa fa-linkedin" aria-hidden="true" title="My Linkedin Profile"></i><span class="sr-only">Linkedin</span></a>
                </div>
                <div class="social-network">
-                  <a href="mailto:hpurwar@gmail.com" target="_blank" class="hvr-sweep-to-right"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                  <a href="mailto:hpurwar@gmail.com" target="_blank" class="hvr-sweep-to-right"><i class="fa fa-envelope" aria-hidden="true"></i><span class="sr-only">Email</span></a>
                </div>
              
                
