--- a/static/stylus/base/_base.styl
+++ b/static/stylus/base/_base.styl
@@ -43,7 +43,8 @@ body
   font-weight: 400
   line-height: 1.7
   color: #2f2f2f
-  background: #f6f3f2
+  //background: #f6f3f2
+  background: #f6f3f200
   +respond(mobile)
     font-size: 1.6rem
 
