--- a/static/css/hp.css
+++ b/static/css/hp.css
@@ -363,7 +363,7 @@ a i,
 a i:before {
   cursor: pointer;
   text-decoration: none;
-  color: #09c;
+  color: #0a80a7;
   -webkit-transition: all 0.25s ease 0s;
   -moz-transition: all 0.25s ease 0s;
   -o-transition: all 0.25s ease 0s;
