--- a/static/stylus/base/_utility.styl
+++ b/static/stylus/base/_utility.styl
@@ -27,7 +27,7 @@ a i,
 a i:before 
   cursor: pointer
   text-decoration: none
-  color: #0099cc
+  color: #0a80a7
   transition: all 0.25s ease 0s
 
 	
