--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,10 @@
-<footer><p class="text-center">{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2006"}}. All rights reserved. {{end}} Built with <span>&#x2665;</span> in <a href="https://gohugo.io" target="_blank">Hugo</a> Deployed on <a href="https://www.netlify.com" target="_blank">Netlify</a></p></footer>
+<footer><p class="text-center">{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2006"}}. All rights reserved. {{end}} Built with <span>&#x2665;</span> in <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a> Deployed on <a href="https://www.netlify.com" target="_blank" rel="noopener">Netlify</a></p></footer>
 
 <!-- Back to Top -->
 <div class="back__top " id="back-top"></div>
 <!-- /Back to Top -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="{{ .Site.BaseURL }}/js/assets/vendor/video/vimeo.ga.min.js"></script>
 <script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
