--- a/static/css/hp.css
+++ b/static/css/hp.css
@@ -36,6 +36,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 1.4rem;
   font-weight: 400;
+  font-display: auto;
   line-height: 1.7;
   color: #2f2f2f;
   background: rgba(246,243,242,0);
