--- a/static/stylus/base/_base.styl
+++ b/static/stylus/base/_base.styl
@@ -41,6 +41,7 @@ body
   font-family: "Open Sans", sans-serif
   font-size: 1.4rem
   font-weight: 400
+  font-display: auto
   line-height: 1.7
   color: #2f2f2f
   //background: #f6f3f2
