--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,19 +8,13 @@
 
   gtag('config', 'UA-123414794-1');
 </script>
-
-  <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="language" content="en">
     <meta name="description" content="{{ if .IsHome}}{{ .Site.Params.Description }}{{ else }}{{.Page.Params.Description}}{{ end }}">
     <meta name="keywords" content="{{ delimit .Keywords ", " }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  {{ .Hugo.Generator }}
+    <meta name=viewport content="width=device-width, initial-scale=1, shrink-to-fit=no"">
 
-  <!-- Enable responsiveness on mobile devices-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  {{ .Hugo.Generator }}
 
   {{ if .IsHome -}}
   <title>{{ .Site.Title }}</title>
