--- a/static/css/hp.css
+++ b/static/css/hp.css
@@ -1190,8 +1190,9 @@ code {
   display: flex;
   flex-flow: column;
   min-height: 45vmin;
-  background-color: #fff;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+  background-color: #fbfbfb;
+  border: 1px solid #e6e4e4;
+  box-shadow: 0 1px 5px rgba(41,40,40,0.07);
 }
 .work__header {
   display: flex;
