--- a/static/stylus/layout/_header.styl
+++ b/static/stylus/layout/_header.styl
@@ -1,5 +1,6 @@
 .header
-	background: basecolor
+	//background: basecolor
+	background-image: linear-gradient(90deg, rgb(13 10 66) 0%, rgb(2 2 43) 35%, rgb(18 92 107) 100%)
 	&--main
 		padding: 6rem 3rem
 	&--single
