--- a/static/css/hp.css
+++ b/static/css/hp.css
@@ -934,7 +934,8 @@ code {
   grid-gap: 10%;
 }
 .header {
-  background: #222950;
+  //background: #222950;
+  background-image: linear-gradient(90deg, rgb(13 10 66) 0%, rgb(2 2 43) 35%, rgb(18 92 107) 100%);
 }
 .header--main {
   padding: 6rem 3rem;
