--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -19,7 +19,7 @@
 							<span>A seasoned </span><br>
 							<span class="intro-words-wrapper">
 							   <b class="is-visible intro__subtitle">User Experience Engineer</b>
-							   <b class="intro__subtitle">Design System Avocado</b>
+							   <b class="intro__subtitle">Design Technologist</b>
 							   <b class="intro__subtitle">Sports addict: Football, F1</b>
 							</span>
 						</h2>
